--- a/catalog.html
+++ b/catalog.html
@@ -93,7 +93,7 @@
       <li class="nav-item">
         <a href="#" class="nav-link active" aria-current="page">
           
-          Home
+          Home  <h1>h</h1>
         </a>
       </li>
       <li>
