--- a/index.html
+++ b/index.html
@@ -130,24 +130,24 @@
         <img src="/myotherimages/Pokemon-Yellow.webp" alt="Pokemon-Yellow"  width="100%" height="100%">
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1 style="color: black;">Start from the begining</h1>
-            <p style="color: black;">Shop from the original Pokemon Games on handheld</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+            <h1 style="color: black;">Start your journey</h1>
+            <p  style="color: black;">Shop from the original Pokemon Games on handheld</p>
+            <p><a class="btn btn-lg btn-primary" id="button2" href="#">Shop Now</a></p>
           </div>
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+        <img src="/myotherimages/mariogalaxy.jpg" alt="mario-figure-play-nintendo-preview" height="100%" width="100%">
         <div class="container">
           <div class="carousel-caption">
-            <h1>Another example headline.</h1>
-            <p>Some representative placeholder content for the second slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+            <h1>Explore the universe</h1>
+            <p>Travel the Galaxy and more in Super Mario Games</p>
+            <p><a class="btn btn-lg btn-primary" id="button2" href="#">Shop Now</a></p>
           </div>
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+        <img src="/myotherimages/zeldawallpaper.jpg" alt="zeldawallpaper" height="100%" width="100%">
         <div class="container">
           <div class="carousel-caption text-end">
             <h1>One more for good measure.</h1>
