--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         <img src="/myotherimages/Pokemon-Yellow.webp" alt="Pokemon-Yellow"  width="100%" height="100%">
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1 style="color: black;">Start your journey</h1>
-            <p  style="color: black;">Shop from the original Pokemon Games on handheld</p>
-            <p><a class="btn btn-lg btn-primary" id="button2" href="#">Shop Now</a></p>
+            <h1 style="color: black; font-weight: bold;">Start your journey</h1>
+            <p  style="color: black; font-weight: bold;">Shop from the original Pokemon Games on handheld</p>
+            <p><a class="btn btn-lg btn-primary" id="button2" href="#" style="margin-top: 146px;">Shop Now</a></p>
           </div>
         </div>
       </div>
@@ -140,9 +140,9 @@
         <img src="/myotherimages/mariogalaxy.jpg" alt="mario-figure-play-nintendo-preview" height="100%" width="100%">
         <div class="container">
           <div class="carousel-caption">
-            <h1>Explore the universe</h1>
-            <p>Travel the Galaxy and more in Super Mario Games</p>
-            <p><a class="btn btn-lg btn-primary" id="button2" href="#">Shop Now</a></p>
+            <h1 style="color: white; font-weight: bold;"> Explore the universe</h1>
+            <p style="color: white; font-weight: bold;">Travel the Galaxy and more in Super Mario Games</p>
+            <p><a class="btn btn-lg btn-primary" id="button2" href="#" style="margin-top: 146px;">Shop Now</a></p>
           </div>
         </div>
       </div>
@@ -150,9 +150,9 @@
         <img src="/myotherimages/zeldawallpaper.jpg" alt="zeldawallpaper" height="100%" width="100%">
         <div class="container">
           <div class="carousel-caption text-end">
-            <h1>One more for good measure.</h1>
-            <p>Some representative placeholder content for the third slide of this carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+            <h1 style="color: white; font-weight: bold;">Save the day.</h1>
+            <p style="color: white; font-weight: bold;">Explore open world retro games that take you on long journeys.</p>
+            <p><a class="btn btn-lg btn-primary" href="#">Shop Now</a></p>
           </div>
         </div>
       </div>
