--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <!--
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
         -->
-            <img src="/myotherimages/Pokemon-Yellow.webp" alt="Pokemon-Yellow" width="100%" height="100%">
+            <img src="/myotherimages/Pokemon-Yellow.webp" alt="Pokemon-Yellow" >
             <div class="container">
               <div class="carousel-caption text-start">
                 <h1 style="color: black; font-weight: bold;">Start your journey</h1>
