--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <!--
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
         -->
-            <img src="/myotherimages/Pokemon-Yellow.webp" alt="Pokemon-Yellow" >
+            <img src="./myotherimages/Pokemon-Yellow.webp" alt="Pokemon-Yellow" width="100%" height="100%">
             <div class="container">
               <div class="carousel-caption text-start">
                 <h1 style="color: black; font-weight: bold;">Start your journey</h1>
@@ -143,7 +143,7 @@
             </div>
           </div>
           <div class="carousel-item active">
-            <img src="/myotherimages/mariogalaxy.jpg" alt="mario-figure-play-nintendo-preview" height="100%"
+            <img src="./myotherimages/mariogalaxy.jpg" alt="mario-figure-play-nintendo-preview" height="100%"
               width="100%">
             <div class="container">
               <div class="carousel-caption">
@@ -154,7 +154,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/myotherimages/zeldawallpaper.jpg" alt="zeldawallpaper" height="100%" width="100%">
+            <img src="./myotherimages/zeldawallpaper.jpg" alt="zeldawallpaper" height="100%" width="100%">
             <div class="container">
               <div class="carousel-caption text-end">
                 <h1 style="color: white; font-weight: bold;">Save the day.</h1>
