--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <div class="carousel-caption">
                 <h1 style="color: white; font-weight: bold;"> Explore the universe</h1>
                 <p style="color: white; font-weight: bold;">Travel the Galaxy and more in Super Mario Games</p>
-                <p><a class="btn btn-lg btn-primary" id="button2" href="#" style="margin-top: 146px;">Shop Now</a></p>
+                <p><a class="btn btn-lg btn-primary" id="button2" href="#" style="margin-top: 170px;">Shop Now</a></p>
               </div>
             </div>
           </div>
@@ -181,7 +181,9 @@
       <!-- Wrap the rest of the page in another container to center all the content. -->
 
       <div class="container marketing">
-
+        
+          <h1 style="text-align: center; margin-bottom: 50px;">Reviews</h1>
+       
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <script type="text/javascript">
