--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script>
     <div class="sidenav">
-      <a href="#">About</a>
+      <button onclick="test()">About</button>
       <a href="#">Services</a>
       <a href="#">Clients</a>
       <a href="#">Contact</a>
@@ -193,6 +193,9 @@
               console.log('error:' + err);
             })
 
+            function test(){
+              console.log("hi");
+            }
           function getReviews(data) {
             let mainContainer = document.getElementById("myData");
             let div = document.createElement("div");
