--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
       crossorigin="anonymous"></script>
     <div class="sidenav">
       <a href="#">Home</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact</a>
+      <a href="#products">Promotions</a>
+      <a href="#reviews">Reviews</a>
+      <a href="#contact">Contact</a>
     </div>
     <div class="main">
       <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -237,8 +237,9 @@
         <!-- START THE FEATURETTES -->
 
 
-
+        
         <div class="row featurette">
+          <div id="products"></div>
           <div class="col-md-7">
             <div id="AD1"></div>
           </div>
@@ -267,7 +268,7 @@
 
         <div class="row">
           <h1 style="text-align: center; margin-bottom: 50px;">Reviews</h1>
-
+          <div id="reviews"></div>
 
           <div class="col-lg-4">
             <div class="fw-normal" id="myData"></div>
@@ -291,9 +292,9 @@
 
       <!-- FOOTER -->
       <footer class="container">
+        <div id="contact"></div>
         <p class="float-end"><a href="#">Back to top</a></p>
-        <p>&copy; 2017–2023 *-Bit Shop. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a>&middot; <a
-            href="#">1-800-BITS</a> </p>
+        <p>&copy; 2017–2023 8-Bit Shop. &middot; <a >1234 A Street, Iowa, USA</a> &middot; <ahref="#">1-800-BITS</a> </p>
       </footer>
   </main>
 
