--- a/catalog.html
+++ b/catalog.html
@@ -113,22 +113,20 @@
   <main class="d-flex flex-nowrap">
 
 
-    <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px;">
+    <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px; margin-top: 110px;">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
 
-        <br> <br> <br><br>
+        
       </a>
       <hr>
       <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item" >
           <a href="./index.html" class="nav-link active" aria-current="page">
-
             Home
           </a>
         </li>
         <li id="NES">
-          <a href="./catalog.html" class="nav-link text-white">
-
+          <a href="#" class="nav-link text-white">
             NES
           </a>
         </li>
