--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
       <div class="container marketing">
         <script type="text/javascript">
-          fetch('data2.json')
+          fetch('indexInfo.json')
             .then(function (response) {
               return response.json();
             })
