--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
             <h3>Jacob Kruse</h3>
             <p>
                 Major: Computer Science<br>
-                Minior: Cyber Security<br>
+                Minor: Cyber Security<br>
                 School Email : jjkruse@iastate.edu<br>
                 Personal Email : jakruse02@gmail.com<br>
             </p>
@@ -131,8 +131,8 @@
             <h3>Oscar Lenkaitis</h3>
             <p>
                 Major: Computer Science<br>
-                Minior: German<br>
-                school Email : oilenk@iastate.edu<br>
+                Minor: German<br>
+                School Email : oilenk@iastate.edu<br>
                 Personal Email : oilenkaitis@gmail.com<br>
             </p>
         </p>
