--- a/catalog.html
+++ b/catalog.html
@@ -117,8 +117,10 @@
   <main class="d-flex flex-nowrap">
 
 
+    <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px; margin-top: 110px;">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
 
+        
       </a>
       <hr>
       <ul class="nav nav-pills flex-column mb-auto">
