--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
 
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="indexP.js"></script>
+  <script src="index.js"></script>
 
   </div>
 </body>
