--- a/catalog.html
+++ b/catalog.html
@@ -204,7 +204,7 @@
 
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 
-  <script src="index.js"></script>
+  <script src="catalog.js"></script>
 
 </body>
 
