--- a/catalog.html
+++ b/catalog.html
@@ -60,7 +60,7 @@
   <main class="d-flex flex-nowrap">
 
 
-    <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px; margin-top: 110px;">
+    <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px; height: 100%; margin-top: 110px; position: fixed;">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
 
         
@@ -132,7 +132,7 @@
 
     <div class="b-example-divider b-example-vr"></div>
 
-    <div class="album py-5 bg-light">
+    <div class="album py-5 bg-light" style="padding-left: 200px; margin-left: 100px;">
       <br> <br> <br> <br>
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
