--- a/catalog.html
+++ b/catalog.html
@@ -60,7 +60,7 @@
   <main class="d-flex flex-nowrap">
 
 
-    <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px; margin-top: 110px;">
+    <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px; margin-top: 110px; height:760px;">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
 
         
@@ -126,10 +126,6 @@
     </div>
 
 
-
-
-
-
     <div class="b-example-divider b-example-vr"></div>
 
     <div class="album py-5 bg-light">
@@ -182,8 +178,6 @@
               <div class="card-body">
                 <p class="card-text" id="4"></p>
                 <div class="d-flex justify-content-between align-items-center">
-
-
                 </div>
               </div>
             </div>
