--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
 <main>
 
   <section class="py-5 text-center container">
-    <h1 class="fw-light">About Us</h1>
+    <h1 class="fw-light" style="margin-top: 160px;">About Us<br>Group 13</h1>
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         
