--- a/catalog.html
+++ b/catalog.html
@@ -38,19 +38,16 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link "  href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="catalog.html">Catalog</a>
+              <a class="nav-link active" aria-current="page" href="catalog.html">Catalog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link "href="about.html">About</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+          
         </div>
       </div>
     </nav>
