--- a/catalog.html
+++ b/catalog.html
@@ -19,6 +19,7 @@
   
   <!-- Custom styles for this template -->
   <link href="sidebars.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -65,55 +66,55 @@
       <hr>
       <ul class="nav nav-pills flex-column mb-auto">
         <li>
-          <a href="#" class="nav-link text-white" id="NES">
+          <a href="#"  id="NES">
 
             NES
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link text-white" id="SNES">
+          <a href="#"  id="SNES">
 
             SNES
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link text-white" id="N64">
+          <a href="#"  id="N64">
 
             N64
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link text-white" id="GC">
+          <a href="#"  id="GC">
 
             GameCube
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link text-white" id="WII">
+          <a href="#"  id="WII">
 
             Wii
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link text-white" Id="GB">
+          <a href="#"  Id="GB">
 
             Gameboy
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link text-white" id="GBA">
+          <a href="#"  id="GBA">
 
             Gameboy Advanced
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link text-white" Id="DS">
+          <a href="#"  Id="DS">
 
             DS
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link text-white" id="3DS">
+          <a href="#"  id="3DS">
 
             3DS
           </a>
