--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <div class="carousel-caption text-start">
                 <h1 style="color: black; font-weight: bold;">Start your journey</h1>
                 <p style="color: black; font-weight: bold;">Shop from the original Pokemon Games on handheld</p>
-                <p><a class="btn btn-lg btn-primary" id="button2" href="#" style="margin-top: 146px;">Shop Now</a></p>
+                <p><a class="btn btn-lg btn-primary" id="button2" href="./catalog.html" style="margin-top: 146px;">Shop Now</a></p>
               </div>
             </div>
           </div>
@@ -94,7 +94,7 @@
               <div class="carousel-caption">
                 <h1 style="color: white; font-weight: bold;"> Explore the universe</h1>
                 <p style="color: white; font-weight: bold;">Travel the Galaxy and more in Super Mario Games</p>
-                <p><a class="btn btn-lg btn-primary" id="button2" href="#" style="margin-top: 170px;">Shop Now</a></p>
+                <p><a class="btn btn-lg btn-primary" id="button2" href="./catalog.html" style="margin-top: 170px;">Shop Now</a></p>
               </div>
             </div>
           </div>
@@ -105,7 +105,7 @@
                 <h1 style="color: white; font-weight: bold;">Save the day.</h1>
                 <p style="color: white; font-weight: bold;">Explore open world retro games that take you on long
                   journeys.</p>
-                <p><a class="btn btn-lg btn-primary" id="button2" href="#">Shop Now</a></p>
+                <p><a class="btn btn-lg btn-primary" id="button2" href="./catalog.html">Shop Now</a></p>
               </div>
             </div>
           </div>
